Cambie color principal

--- a/estilo.css
+++ b/estilo.css
@@ -5,6 +5,7 @@
     margin: 0;
     padding: 0;
 }
+/*     1cb698 */
 html{
     /* DESLIZAR CUANDO HAGO CLICK EN LOS LINK DEL MENU */
     scroll-behavior: smooth;
@@ -30,7 +31,7 @@ html{
 .contenedor-header header .logo a{
     font-family: 'Righteous';
     font-size: 2rem;
-    color: #1CB698;
+    color: #bc4ac7;
     text-decoration: none;
 }
 .contenedor-header header ul{
@@ -46,10 +47,10 @@ html{
     text-decoration: none;
 }
 .contenedor-header header nav ul li a:hover{
-    color: #1CB698;
+    color: #bc4ac7;
 }
 .nav-responsive{
-    background-color: #1CB698;
+    background-color: #bc4ac7;
     color:#fff;
     padding: 5px 10px;
     border-radius: 5px;
@@ -76,7 +77,7 @@ html{
 }
 .inicio .contenido-banner img{
     margin-top: 40px;
-    border: 10px solid #1CB698;
+    border: 10px solid #be4cc8;
     display: block;
     margin: auto;
     width: 80%;
@@ -105,7 +106,7 @@ html{
     transition: .3s;
 }
 .inicio .contenido-banner .redes a:hover{
-    background-color: #1CB698;
+    background-color: #bc4ac7;
 }
 .sobremi{
     background-color: #1e2326;
@@ -128,7 +129,7 @@ html{
     margin-bottom: 20px;
 }
 .sobremi .contenido-seccion p span{
-    color: #1CB698;
+    color: #bc4ac7;
     font-weight: bold;
 }
 .sobremi .fila{
@@ -150,11 +151,11 @@ html{
 }
 .sobremi .fila .col ul li strong{
     display: inline-block;
-    color: #1CB698;
+    color: #bc4ac7;
     width: 130px;
 }
 .sobremi .fila .col ul li span{
-    background-color: #1CB698;
+    background-color: #bc4ac7;
     padding: 3px;
     font-weight: bold;
     border-radius: 5px;
@@ -183,7 +184,7 @@ html{
     left: 0;
     width: 0;
     height: 100%;
-    background-color: #1CB698;
+    background-color: #bc4ac7;
     z-index: -1;
     transition: 1s;
 }
@@ -233,7 +234,7 @@ html{
     margin-bottom: 30px;
 }
 .skills .skill .progreso{
-    background-color: #1CB698;
+    background-color: #bc4ac7;
     position: absolute;
     top: 0;
     left: 0;
@@ -243,7 +244,7 @@ html{
     position: absolute;;
     height: 40px;
     width: 40px;
-    background-color: #1CB698;
+    background-color: #bc4ac7;
     border-radius: 50px;
     line-height: 40px;
     text-align: center;
@@ -394,31 +395,31 @@ html{
     margin-bottom: 10px;
 }
 .curriculum .fila .item .casa{
-    color: #1CB698;
+    color: #bc4ac7;
     font-size: 22px;
     font-weight: bold;
     display: block;
 }
 .curriculum .fila .item .fecha{
     display: block;
-    color: #1CB698;
+    color: #bc4ac7;
     margin-bottom: 10px;
 }
 .curriculum .fila .item p{
     line-height: 24px;
 }
 .curriculum .fila .izq{
-    border-right: 2px solid #1CB698;
+    border-right: 2px solid #bc4ac7;
     margin-right: 20px ;
 }
 .curriculum .fila .der{
-    border-left: 2px solid #1CB698;
+    border-left: 2px solid #bc4ac7;
     margin-left: 20px ;
 }
 
 .curriculum .fila .item .conectori{
     height: 2px;
-    background-color: #1CB698;
+    background-color: #bc4ac7;
     width: 47px;
     position: absolute;
     top: 50%;
@@ -430,14 +431,14 @@ html{
     height: 10px;
     width: 10px;
     border-radius: 50%;
-    background-color: #1CB698;
+    background-color: #bc4ac7;
     float: right;
     position: relative;
     bottom: 4px;
 }
 .curriculum .fila .item .conectord{
     height: 2px;
-    background-color: #1CB698;
+    background-color: #bc4ac7;
     width: 47px;
     position: absolute;
     top: 50%;
@@ -449,7 +450,7 @@ html{
     height: 10px;
     width: 10px;
     border-radius: 50%;
-    background-color: #1CB698;
+    background-color: #bc4ac7;
     float: left;
     position: relative;
     bottom: 4px;
@@ -492,7 +493,8 @@ html{
     height: 100%;
     width: 100%;
     text-align: center;
-    background: linear-gradient(rgba(28,182,152,.8),rgba(28,182,152,.8));
+    background: linear-gradient(rgb(190, 76, 200),rgb(190, 76, 200));
+    /* (rgba(28,182,152,.8),rgba(28,182,152,.8)) */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -536,7 +538,7 @@ html{
     left: 0;
     width: 0;
     height: 100%;
-    background-color: #1CB698;
+    background-color: #bc4ac7;
     z-index: -1;
     transition: 1s;
 }
@@ -599,7 +601,7 @@ html{
     left: 0;
     width: 0;
     height: 100%;
-    background-color:#1CB698 ;
+    background-color:#bc4ac7 ;
     z-index: -1;
     transition: 1s;
 }
@@ -625,13 +627,13 @@ html{
     margin-bottom: 20px;
 }
 .contacto .col .info ul li i{
-    color: #1CB698;
+    color: #bc4ac7;
     display: inline-block;
     margin-right: 20px;
 }
 /* FOOTER */
 footer{
-    background-color: #252A2E;
+    background-color: #1e2326;
     color: #fff;
     padding: 50px 0 30px 0;
     text-align: center;
@@ -655,13 +657,13 @@ footer .redes a{
     transition: .3s;
 }
 footer .redes a:hover{
-    background-color: #1CB698;
+    background-color: #bc4ac7;
 }
 footer .arriba{
     display: block;
     width: 50px;
     height: 50px;
-    background-color: #1CB698;
+    background-color: #bc4ac7;
     color: #fff;
     position: absolute;
     left: 50%;
