--- a/estilo.css
+++ b/estilo.css
@@ -29,10 +29,10 @@ html{
 
 }
 img{
-    width: 4.5rem;
+    width: 4gitrem;
     padding: 0;
     margin: 0;
-    
+
 }
 .contenedor-header header .logo a{
     font-family: 'Righteous';
@@ -58,7 +58,7 @@ img{
 .nav-responsive{
     background-color: #bc4ac7;
     color:#fff;
-    padding: 5px 10px;
+    padding: 10px 15px;
     border-radius: 5px;
     cursor: pointer;
     display: none;
